(library
 (name sail_plugin_c)
 (public_name sail_c_backend)
 (modes byte native)        ; Build both bytecode (.cma) and native (.cmxs)
 (libraries libsail))        ; Dependencies for your plugin

(install
 (section
  (site
   (libsail plugins)))
 (package sail_c_backend)
 (files sail_plugin_c.cmxs sail_plugin_c.cma))
