(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(library
 (name sail_plugin_coq)
 (public_name sail_coq_backend)
 (modes byte native)
 (libraries libsail))

(install
 (section
  (site
   (libsail plugins)))
 (package sail_coq_backend)
 (files sail_plugin_coq.cmxs sail_plugin_coq.cma))
