(library
 (name sail_plugin_doc)
 (public_name sail_doc_backend)
 (modes native byte)
 (flags (:standard -linkall))
 (libraries libsail omd yojson base64)
;  (embed_in_plugin_libraries omd base64)
)

(install
 (section
  (site
   (libsail plugins)))
 (package sail_doc_backend)
 (files sail_plugin_doc.cmxs sail_plugin_doc.cma))
