(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(library
 (name sail_plugin_latex)
 (public_name sail_latex_backend)
 (modes native byte)
 (flags (:standard -linkall))
 (libraries libsail omd)
;  (embed_in_plugin_libraries omd)
 )

(install
 (section
  (site
   (libsail plugins)))
 (package sail_latex_backend)
 (files sail_plugin_latex.cmxs sail_plugin_latex.cma))
