(env
 (dev
  (flags
   (:standard -w -27)))
 (release
  (flags
   (:standard -w -27))))

(library
 (name sail_plugin_lem)
 (public_name sail_lem_backend)
 (modes native byte)
 (libraries libsail))

(install
 (section
  (site
   (libsail plugins)))
 (package sail_lem_backend)
 (files sail_plugin_lem.cmxs sail_plugin_lem.cma))
