(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(library
 (name sail_plugin_ocaml)
 (public_name sail_ocaml_backend)
 (modes native byte)
 (flags (:standard -linkall))
 (libraries libsail base64)
 )

(install
 (section
  (site
   (libsail plugins)))
 (package sail_ocaml_backend)
 (files sail_plugin_ocaml.cmxs sail_plugin_ocaml.cma))
