(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(library
 (name sail_plugin_smt)
 (public_name sail_smt_backend)
 (modes native byte)
 (libraries libsail))

(install
 (section
  (site
   (libsail plugins)))
 (package sail_smt_backend)
 (files sail_plugin_smt.cmxs sail_plugin_smt.cma))
