(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(library
 (name sail_plugin_sv)
 (public_name sail_sv_backend)
 (modes native byte)
 (libraries libsail))

(menhir
 (modules sv_type_parser))

(ocamllex sv_type_lexer)

(install
 (section
  (site
   (libsail plugins)))
 (package sail_sv_backend)
 (files sail_plugin_sv.cmxs sail_plugin_sv.cma))
